--- a/src/FlightProperty.module.css
+++ b/src/FlightProperty.module.css
@@ -1,10 +1,15 @@
 .property {
   min-height: 3rem;
   color: white;
+  font-size: 68px;
 }
 
 .name {
   padding-bottom: 1rem;
   color: #808080;
   font-size: 62pt;
+}
+
+.property p {
+  margin: 0rem;
 }
