--- a/src/FlightDetailsBoard.module.css
+++ b/src/FlightDetailsBoard.module.css
@@ -1,6 +1,8 @@
 .board {
   display: flex;
   flex-flow: column nowrap;
+  height: 100vh;
+  background-color: black;
 }
 
 .title {
@@ -9,7 +11,6 @@
 }
 
 .cards {
-  background-color: black;
   padding: 6rem 6rem;
 }
 
