--- a/src/FlightDetailsCard.module.css
+++ b/src/FlightDetailsCard.module.css
@@ -4,15 +4,15 @@
   padding-top: 5rem;
   padding-bottom: 2rem;
 }
-/* darkened line and header color from #808080
+/* TODO: darkened line and header color from #808080
 to #2b2b2b */
 
 .cardUnderline {
-  border-bottom: 4px solid #2b2b2b;
+  border-bottom: 4px solid #808080;
 }
 
 .header {
-  border-bottom: 4px solid #2b2b2b;
+  border-bottom: 4px solid #808080;
 }
 
 .destination {
@@ -30,7 +30,7 @@ to #2b2b2b */
 }
 
 .propertyUnderline {
-  border-bottom: 4px solid #2b2b2b;
+  border-bottom: 4px solid #808080;
 }
 
 .propertyText {
