--- a/src/FlightProperty.module.css
+++ b/src/FlightProperty.module.css
@@ -7,7 +7,7 @@
 
 .name {
   padding-bottom: 1rem;
-  color: #2b2b2b;
+  color: #808080;
   font-size: 45px;
   font-family: "HelveticaNeueRegular";
   line-height: 45px;
