--- a/src/FlightDetailsCard.module.css
+++ b/src/FlightDetailsCard.module.css
@@ -36,7 +36,8 @@ to #2b2b2b */
 .propertyText {
   min-height: 8rem;
   max-height: 8rem;
-  padding-left: 1rem;
+  padding-left: 1.5rem;
   overflow-y: hidden;
   letter-spacing: 1.5px;
+  padding-top: 20px;
 }
