--- a/src/FlightProperty.module.css
+++ b/src/FlightProperty.module.css
@@ -18,3 +18,20 @@
   margin: 0rem;
   font-family: "HelveticaNeueRegular";
 }
+
+@media only screen and (max-width: 1680px) {
+  .property {
+    min-height: 3vh;
+    font-size: 3vh;
+    line-height: 3vh;
+  }
+  .name {
+    padding-bottom: 1vh;
+    font-size: 2vh;
+    line-height: 2vh
+  }
+  p {
+    padding-bottom: 1vh;
+  }
+}
+
