--- a/src/FlightDetailsCard.module.css
+++ b/src/FlightDetailsCard.module.css
@@ -36,6 +36,7 @@ to #2b2b2b */
   overflow-y: hidden;
   letter-spacing: 1.5px;
   padding-top: 20px;
+  line-height: 72px;
 }
 
 @media only screen and (max-width: 1680px) {
