--- a/src/FlightDetailsBoard.module.css
+++ b/src/FlightDetailsBoard.module.css
@@ -29,6 +29,14 @@
     margin-bottom: 4rem;
     height: 218px;
 }
+.title h2 {
+    font-family: Didot;
+    color: white;
+    font-weight: 100;
+    margin-bottom: 1.75rem;
+    font-size: 125px;
+    white-space: nowrap;
+}
 
 @media only screen and (max-width: 1680px) {
     .title img {
