--- a/src/FlightDetailsBoard.module.css
+++ b/src/FlightDetailsBoard.module.css
@@ -33,8 +33,9 @@
     font-family: Didot;
     color: white;
     font-weight: 100;
-    margin-bottom: 1.75rem;
-    font-size: 125px;
+    margin-bottom: 5rem;
+    margin-left: -13px;
+    font-size: 165px;
     white-space: nowrap;
 }
 
